--- a/myproject/templates/student/student_statements.html
+++ b/myproject/templates/student/student_statements.html
@@ -36,6 +36,37 @@
 
 {% block content %}
 
-    
+<div class="container mt-4">
+    <h2 class="text-center mb-4">Мои заявления</h2>
+
+    <!-- Карточки заявлений -->
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <!-- Карточка 1 -->
+        {% for statement in statements %}
+            <div class="col">
+                <div class="card p-3 text-center">
+                    <h5 class="card-title">📝 Заявление на {{statement.statement_type}}</h5>
+                    <p><strong>📅 Дата подачи:</strong> {{statement.submitting_date}}</p>
+                    <p><strong>🔄 Статус:</strong> {{statement.status}}</p>
+                    <p><strong>🎓 Курс:</strong> {{statement.course.course_name}}</p>
+                    <p><strong>Зачислен в группу:</strong> {{statement.group.name}}</p>
+                    <div class="mt-auto">
+                        {% if statement.status == "Одобрено" %}
+                            <button class="btn btn-cancel w-100" disabled>Отозвать</button>
+                        {% elif statement.status == "Отклонено" %}
+                            <button class="btn btn-cancel w-100" disabled>Отозвать</button>
+                        {% else %}
+                        <form action="{% url "student_statements" %}" method="POST">
+                            {% csrf_token %}
+                            <input type="hidden" name="statement_id" value="{{statement.id}}">
+                            <button class="btn btn-cancel w-100">Отозвать</button>
+                        </form>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock content %}
