--- a/myproject/templates/dpo/students/student_profile.html
+++ b/myproject/templates/dpo/students/student_profile.html
@@ -47,7 +47,7 @@
                 </div>
                 
                 
-                <a href="" class="btn btn-edit mt-3 w-100">Изменить данные</a>
+                <a href="{% url "student_edit" student.id%}" class="btn btn-edit mt-3 w-100">Изменить данные</a>
             </div>
         </div>
     </div>
