--- a/myproject/templates/manager_navigation.html
+++ b/myproject/templates/manager_navigation.html
@@ -18,7 +18,7 @@
             <a href="{% url 'students' %}" class="nav-link nav-item">Слушатели</a> 
             <a href="{% url 'groups' %}" class="nav-link nav-item">Группы</a>
             <a href="{% url 'statements' %}" class="nav-link nav-item">Заявления</a>
-            <a href="{% url 'commission' %}" class="nav-link nav-item">Комиссия</a>
+            <a href="{% url 'documents' %}" class="nav-link nav-item">Документы</a>
         </div>
         <div class="col col-md-auto">
             <div class="dropdown">
@@ -26,7 +26,7 @@
                     Меню
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="userMenu">
-                    <li><a class="dropdown-item" href="{% url 'orders' %}">Приказы</a></li>
+                    <li><a class="dropdown-item" href="{% url 'commission' %}">Комиссия</a></li>
                     <li><a class="dropdown-item" href="{% url 'courses' %}">Курсы</a></li>
                     <li><a class="dropdown-item" href="{% url 'teachers' %}">Преподаватели</a></li>
                     <li><hr class="dropdown-divider"></li>
