--- a/myproject/templates/dpo/statements.html
+++ b/myproject/templates/dpo/statements.html
@@ -80,10 +80,15 @@
                     <!-- Карточка 1 -->
                     {% for statement in statements %}
                     <div class="card p-4 mb-3">
-                        <h4>Слушатель: <strong>{{ statement.student.surname }} {{ statement.student.name }} {{ statement.student.patronymic }}</strong></h4>
+                        <h4>👨‍🎓 <strong>{{ statement.student.surname }} {{ statement.student.name }} {{ statement.student.patronymic }}</strong></h4>
                         <p><strong>📝 Тип заявления:</strong> {{ statement.statement_type }}</p>
                         <p><strong>📅 Дата подачи:</strong> {{ statement.submitting_date }}</p>
                         <p><strong>🎓 Курс:</strong> {{ statement.course.course_name }}</p>
+                        <p><strong>Статус:</strong> {{ statement.status }}</p>
+                        {% if statement.status == "Одобрено" %}
+                        <p><strong>Группа:</strong> {{ statement.group.name }}</p>
+                        {% endif %}
+                        {% if statement.status == "На рассмотрении" %}
                         <form action="{% url "statements" %}" method="POST">
                             {% csrf_token %}
                             <label for="groups"><strong>Группа:</strong></label>
@@ -108,19 +113,22 @@
                             </select>
         
                             <!-- Кнопки -->
-                            <div class="d-flex justify-content-between mt-3">
+                            <div class="mt-3 d-flex justify-content-center">
                                 <input type="hidden" name="statement_id" value="{{statement.id}}">
                                 <input type="hidden" name="action_type" value="submit">
-                                <button class="btn btn-accept w-50 me-2" type="submit">Зачислить</button>
+                                <button class="btn btn-accept w-100 me-2" type="submit">Зачислить</button>
+                            </div>
                         </form>
-
+                            
                         <form action="{% url "statements" %}">
                             {% csrf_token %}
-                            <input type="hidden" name="action_type" value="recall">
-                            <input type="hidden" name="statement_id" value="{{statement.id}}">
-                            <button class="btn btn-reject w-50" type="submit">Отклонить</button>
+                            <div class="mt-2 d-flex justify-content-center">
+                                <input type="hidden" name="action_type" value="recall">
+                                <input type="hidden" name="statement_id" value="{{statement.id}}">
+                                <button class="btn btn-reject w-100 me-2 " type="submit">Отклонить</button>
+                            </div>
                         </form>
-                        </div>
+                        {% endif %}
                     </div>
                     {% endfor %}
                 </div>
